# python-api-automation

./: .env  .gitignore  pyproject.toml
BasicSession-01/: ApiValidations01.py  ApiValidations02.py  ApiValidations03.py  dbtest.py
dbqueries/: books.py  customers.py  getQueries.py
features/: cucumber01.feature  environment.py
features/steps/: stepImpl.py
tests/: ApiValidations03.py
utils/: configurations.py  dbUtil.py  headers.py  payload.py  properties.ini  resources.py
