[tool.poetry]
name = "python-api-automation"
version = "0.1.0"
description = ""
authors = ["mr-possible <sambhavd4@gmail.com>"]
readme = "README.md"
packages = [{include = "python_api_automation"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
behave = "^1.2.6"
mysql-connector-python = "8.0.26"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
